edit: change title when edit

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}添加新联系人{% endblock %}
-{% block title2 %}添加新联系人{% endblock %}
+{% block title %}{{ title }}{% endblock %}
+{% block title2 %}{{ title }}{% endblock %}
 {% block content %}
     <div class="container">
 		<div class="panel">
